Fix upgrade page scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@
   }
 
   html {
+    color-scheme: light;
     scrollbar-gutter: stable;
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
@@ -133,6 +134,7 @@
   }
 
   .dark {
+    color-scheme: dark;
     --background: 240 100% 0.8%;
     --foreground: 210 40% 98%;
 
